--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,11 @@
 
     <groupId>si</groupId>
     <artifactId>criptsimetrica</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>ui</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>12</maven.compiler.source>
