--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>12</maven.compiler.target>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.release>12</maven.compiler.release>
+        <javafx.version>12</javafx.version>
     </properties>
 
     <artifactId>ui</artifactId>
@@ -23,11 +24,24 @@
             <artifactId>javafx-controls</artifactId>
             <version>12</version>
         </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>12</version>
-        </dependency>
+        <!--          <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-graphics</artifactId>-->
+        <!--            <version>12</version>-->
+        <!--            <classifier>win</classifier>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-graphics</artifactId>-->
+        <!--            <version>12</version>-->
+        <!--            <classifier>linux</classifier>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-graphics</artifactId>-->
+        <!--            <version>12</version>-->
+        <!--            <classifier>mac</classifier>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
@@ -47,6 +61,27 @@
                 <configuration>
                     <mainClass>org.openjfx.App</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <transformers>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>main.Launcher</mainClass>
+                        </transformer>
+                    </transformers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
